<resources>
    <string name="app_name">HomeWork2</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_music">Music</string>
    <string name="menu_main">Main</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_store">Store</string>
    <string name="unactive_fragment">Unactive fragment</string>
    <string name="main">Main</string>
    <string name="music">Music</string>
    <string name="unactive_fragment1">Unactive fragment</string>
    <string name="settings">Settings</string>
    <string name="unactive_fragment3">Unactive fragment</string>
    <string name="store">Store</string>
    <string name="profile">Profile</string>
    <string name="unactive">Unactive</string>

</resources>