<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_gamepad_24"
        android:title="@string/menu_main"/>

    <item
        android:id="@+id/storeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_store_24"
        android:title="@string/menu_store"/>

    <item
        android:id="@+id/profile_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile"/>

    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/musicFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/menu_music" />
</menu>